--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,8 @@ body {
   color: var(--title-text-color);
   padding-top: 32px;
   padding-bottom: 32px;
-  
+
+  transition: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -189,6 +190,7 @@ body {
   align-items: center;
   gap: 10px;
 
+  transition: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -377,17 +379,19 @@ body {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
 
+  transition-property: background-color, fill;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .social-team-icon {
-  fill: var(--company-color);
+  fill: var(--company-color); 
 }
 
 .social-team-link:hover,
 .social-team-link:focus {
   background-color: var(--btn-color);
+    
 }
 
 .social-team-link:hover .social-team-icon,
@@ -422,6 +426,7 @@ body {
   border: 1px solid var(--company-color);
   border-radius: 4px;
 
+  transition-property: color, border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -430,7 +435,6 @@ body {
 .client-link:focus {
   color: var(--btn-color);
   border: 1px solid var(--btn-color);
-  outline-color: currentColor;
 }
 
 .client-icon {  
@@ -456,6 +460,7 @@ body {
   border-radius: 4px;
   padding: 6px 25px;
   
+  transition-property: color, background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
@@ -502,15 +507,18 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
+.portfolio-link {
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .portfolio-link:hover,
 .portfolio-link:focus {
   display: block;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
   0px 4px 4px rgba(0, 0, 0, 0.06),
   1px 4px 6px rgba(0, 0, 0, 0.16);
-
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -580,6 +588,7 @@ body {
   line-height: 1.71;  
   color: rgba(255, 255, 255, 0.6);
 
+  transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -622,6 +631,7 @@ body {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
 
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
