--- a/css/style.css
+++ b/css/style.css
@@ -379,19 +379,21 @@ body {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
 
-  transition-property: background-color, fill;
+  transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .social-team-icon {
-  fill: var(--company-color); 
+  fill: var(--company-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-team-link:hover,
 .social-team-link:focus {
   background-color: var(--btn-color);
-    
 }
 
 .social-team-link:hover .social-team-icon,
